--- a/css/style.css
+++ b/css/style.css
@@ -195,55 +195,122 @@ body{
     grid-template-rows: 190px;
     grid-template-columns: repeat(7, 271px);
 }
-/*section 5*/
 .hot-news-grid{
     width: 1169px;
     margin: 0 auto;
     display: grid;
-    grid-template-rows: 259px 418px 416px 259px;
-    row-gap: 35px;
+    grid-template-rows: 259px 35px 418px 35px 416px 35px 259px;
+    grid-template-columns: 277px 277px 60px 277px 277px;
     padding-bottom: 71px;
 }
-.news-grid-row{
-    display: grid;
-}
-.news-grid-box{
+.gb{
+    cursor: pointer;
     background: #F9F7F7;
 }
-.news-row1{
-    grid-template-columns: 856px 277px;
-    column-gap: 35px;
+.gd{
+    text-align: end;
 }
-.news-row2, .news-row3{
-    grid-template-columns: 554px 554px;
-    column-gap: 60px;
-}
-.news-row4{
-    grid-template-columns: 277px 856px;
-    column-gap: 35px;
-}
-.grid-text{
-    text-align: right;
-}
-.img{
-    float: left;
-}
-.grid-box-title{
-    text-align: right;
+.gt{
+    color: #353A3D;    
     font-size: 18px;
-    font-weight: 700;
-    color: #353A3D;
-    padding: 41px 24px 22px 61px;
+    font-weight: 700;    
 }
-.grid-box-text{
-    word-break: break-all;
+.gt-gb1,.gt-gb8{
+    padding-bottom: 22px;  
+}
+.gbt{
+    line-height: 1.4;
     font-size: 14px;
     color: #5B6469;
     font-weight: 600;
-    width: 320px;
+    overflow: hidden;
+}
+.gd1, .gd8{
+    padding: 41px 24px 37px 512px;    
+}
+.gb1{
+    grid-column-start: 1;
+    grid-column-end: span 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    margin-right: 35px;
+}
+.gbt1, .gbt8{
     height: 140px;
-    float: right;
-    text-align: right;
-    margin-right: 24px;
-    line-height: 1.3;
+}
+.gb1>:first-child,.gb8>:first-child{
+  float: left;   
+}
+.gb2{
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.gt-gb2,.gt-gb7{
+    text-align: center;
+    padding-top: 14px;
+}
+.gb3{
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+.gd-center{
+    padding: 20px 27px 21px 22px;
+}
+.gt-gb-center{
+    padding-bottom: 22px;
+}
+.gbt-center{
+    height: 77px;
+}
+.gb4{
+    grid-column-start: 4;
+    grid-column-end: span 6;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+.gb5{
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    grid-row-start: 5;
+    grid-row-end: 6;
+}
+.gb6{
+    grid-column-start: 4;
+    grid-column-end: span 6;
+    grid-row-start: 5;
+    grid-row-end: 6;
+}
+.gb7{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 7;
+    grid-row-end: 8;
+}
+.gb8{
+    grid-column-start: 2;
+    grid-column-end: span 4;
+    grid-row-start: 7;
+    grid-row-end: 8;
+    margin-left: 35px;
+}
+/*footer*/
+.footer{
+    background: #1D2124;
+}
+.footer-grid{
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    width: 1169px;
+    grid-template-rows: 80px;
+    grid-template-columns: 504px 105px;
+    display: grid;
+}
+.footer-text{
+    font-size: 13px;
+    color: #fff;
 }
